# secure-storage-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  secure_storage.rs
src/core/: encryption.rs
src/error/: mod.rs
src/storage/: storage.rs
