[package]
name = "secure_storage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uniffi_bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "secure_storage"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# AES-GCM encryption
aes-gcm = "0.10"

# Secure random nonces
rand = "0.8"

# Wipe keys in memory
zeroize = "1.7"

# Embedded key-value store
sled = "0.34.7"

# Generate bindings
uniffi = {version = "0.31.0", features=["cli"]}

# error handling
anyhow = "1.0.102"
thiserror = "2"

# master key secure store
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
